# DigiVote

./: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  setup.sh
digivote/: db.sqlite3  manage.py
digivote/digivote/: asgi.py  settings.py  urls.py  wsgi.py
digivote/vote/: admin.py  forms.py  models.py  urls.py  views.py
digivote/vote/migrations/: 0001_initial.py  0002_vote.py  0003_poll_close_date.py  0004_alter_poll_close_date.py  0005_alter_poll_close_date.py  0006_alter_poll_close_date_alter_poll_publish_date.py  0007_alter_poll_close_date_alter_poll_publish_date.py  0008_alter_poll_close_date_alter_poll_publish_date.py  0009_vote_receipt_id.py  0010_alter_vote_receipt_id.py  0011_poll_open_date_alter_vote_receipt_id.py  0012_poll_hide_poll_alter_vote_receipt_id.py  0013_rename_hide_poll_poll_visible_alter_vote_receipt_id.py  0014_alter_poll_visible_alter_vote_receipt_id.py  0015_poll_results_visible_alter_vote_receipt_id.py  0016_election_alter_vote_receipt_id_candidate_ballot.py  0017_alter_ballot_receipt_id_alter_vote_receipt_id.py  0018_remove_ballot_receipt_id_remove_vote_receipt_id.py  0019_election_election_type_election_number_of_seats.py  0020_election_voting_instructions_and_more.py  0021_alter_ballot_unique_together_and_more.py
digivote/vote/templates/: auth_success.html  ballot_receipt.html  base.html  confirm_ballot.html  confirm_vote.html  details.html  election_details.html  election_vote.html  elections.html  index.html  login.html  my_votes.html  polls.html  register.html  register_success.html  vote.html  (+3 more)
