[tool.poetry]
name = "digivote"
version = "1.0.0"
description = "A django application for conducting elections and holding votes digitally with ease."
authors = ["LiamSpatola"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
